--- a/1dogvsdcat.html
+++ b/1dogvsdcat.html
@@ -10,12 +10,8 @@ layout: page
     const response = await fetch("https://happygamer-firstspace.hf.space/run/predict", {
       method: "POST",
       headers: { "Content-Type": "application/json" },
-      body: JSON.stringify({
-        data: [
-          "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAEAAAABCAYAAAAfFcSJAAAACklEQVR4nGMAAQAABQABDQottAAAAABJRU5ErkJggg==",
-        ]
-      })
-    });
+      body: JSON.stringify({ "data": [reader.result] })
+  });
     const json = await response.json();
     const label = json['data'][0]['confidences'][0]['label'];
     results.innerHTML = `<br/><img src="${reader.result}" width="300"> <p>${label}</p>`
